d08_02_terraform_meta_argument_for_each_map/a02_01_vpc.tf
# Resource block: VPC
resource "google_compute_network" "vpcd06" {
  name                    = var.vpc_name # "vpc-d03"
  auto_create_subnetworks = false
}
