d08_02_terraform_meta_argument_for_each_map/a04_01_firewall_rules.tf
# Resource: Firewall rule - SSH port 22
resource "google_compute_firewall" "fwssh" {
  name      = "fwrule-allow-ssh22"
  network   = google_compute_network.vpcd06.id
  priority  = 1000
  direction = "INGRESS"
  # source_ranges = ["173.61.6.206/32"]
  source_ranges = ["0.0.0.0/0"]
  description   = "Allow SSH and ICMP only from my home IP"
  target_tags   = ["ssh-tag"]
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  allow {
    protocol = "icmp"
  }
}

# Resource: Firewall rule - HTTP port 80
resource "google_compute_firewall" "fwhttp" {
  name          = "fwrule-allow-http80"
  network       = google_compute_network.vpcd06.id
  priority      = 1000
  direction     = "INGRESS"
  source_ranges = ["0.0.0.0/0"]
  description   = "Allow HTTP from the internet"
  target_tags   = ["http-tag"]
  allow {
    protocol = "tcp"
    ports    = ["80", "8080"]
  }
}
